<resources>
    <string name="app_name">COPPA Vietnam</string>
    <string name="lorem">Lorem Ipsum is simply a piece of false text, used for presentation and layout for printing. Lorem Ipsum has been used as a standard text for the printing industry since the 1500s, when an anonymous artist put together several texts to form a text template. This text has not only existed for five centuries, but when applied to office computing, its content has not been changed. It was popularized in the 1960s by selling Letraset sheets of Lorem Ipsum passages, and more recently, used in page layout applications, like Aldus PageMaker.</string>
    <string name="request_name">Full Name</string>
    <string name="finish">Finish</string>
    <string name="request_phone">Phone number</string>
    <string name="request_boat_code">Vessel ID</string>
    <string name="otherCategorize">Other families</string>
    <string name="hint_length">Length (cm)</string>
    <string name="hint_weight">Weight (kg)</string>
    <string name="hint_catched_time">What time?</string>
    <string name="hint_catched_date">Catch date</string>
    <string name="dialog_camera">Camera</string>
    <string name="dialog_gallery">Gallery</string>
    <string name="dialog_default">Default Image</string>
    <string name="dialog_close">Close</string>
    <string name="des_full_obj_feature">Full photo</string>
    <string name="fish_name">Species name:</string>
    <string name="fish_long">Length:</string>
    <string name="fish_weight">Weight:</string>
    <string name="fish_location">Location:</string>
    <string name="fish_catched_time">Catch time:</string>
    <string name="next">Continue</string>
    <string name="saved">Catalog saved</string>
    <string name="close">Close</string>
    <string name="title_activity_fs_home">fsHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="review">Review</string>
    <string name="end_trip">End trip</string>
    <string name="new_trip">New trip</string>
    <string name="no_photo_about_this_family">No photos have been taken of this species</string>
    <string name="author_name">Nguyễn Trọng Nghĩa</string>
    <string name="author_phone">0886483147</string>
    <string name="author_groups">© Develop by NTD Group</string>
    <string name="please_create_new_tri">Please create new trip</string>
    <string name="get_object_via_camera">Change the image with the camera</string>
    <string name="image_from_gallery">Choose from photos in the photo gallery</string>
    <string name="bring_this_image_to_default">Remove the current image and return to the default image</string>
    <string name="close_options">Close options</string>
    <string name="can_not_update_host_address">Can\'t update host address</string>
    <string name="sync">Synchronize</string>
    <string name="update_user">Update user</string>
    <string name="waiting_internet">Network waiting</string>
    <string name="need_network_to_finish">Need internet to finish</string>
    <string name="delete_image">Delete image?</string>
    <string name="sure_to_do_delete_image_num">Delete image number </string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="processing">Processing</string>
    <string name="device_not_sp_gg_services">Sorry, This device does not support Google services</string>
    <string name="please_turn_on_GPS">Please turn on GPS navigation first!</string>
    <string name="not_located_yet">NOT LOCATED</string>
    <string name="not_located_plz_try_again">The location has not been located yet, please try after a few minutes!</string>
    <string name="not_enough">SHORT!</string>
    <string name="plz_insert_full_info">Please enter full information.</string>
    <string name="save_success">Save successfully!</string>
    <string name="can_not_save">CAN\'T SAVE!</string>
    <string name="have_problem_when_save_plz_try">Having trouble saving data, please try again !</string>
    <string name="sure_delete">MAKE SURE DELETE?</string>
    <string name="current_image_will_be_replace_by_default">The current image will be deleted and replaced with the default image of the software!</string>
    <string name="cancle">Cancle</string>
    <string name="camera_permission_success">Grant the right to use the camera successfully!</string>
    <string name="camera_permission_denied">Refused to grant permission to use the camera</string>
    <string name="locate_permission_success">Cấp quyền truy cập vị trí thành công!</string>
    <string name="write_external_permission_success">Grant successful location access!</string>
    <string name="operation_fail">Sorry! Operation failed.</string>
    <string name="still_have">Still have </string>
    <string name="records_not_sync"> record(s) not synchronize</string>
    <string name="can_not_finish">CAN\'T FINISH!</string>
    <string name="sync_not_finish_please_connect_internet">Previous sync is not done yet! Please connect to the network to continue.</string>
    <string name="end">End</string>
    <string name="create_new_trip">Create new trip?</string>
    <string name="create">Create</string>
    <string name="success">Success</string>
    <string name="edit_user_info">EDIT INFOMATION?</string>
    <string name="edit">Edit</string>
    <string name="not_support">Currently not supported!</string>
    <string name="name_can_not_included_number">Name cannot have numbers!</string>
    <string name="sure_save_all_infor_above">Definitely save the above information?</string>
    <string name="save">Save</string>
    <string name="declare_info_successfully">Declared information successfully!</string>
    <string name="can_not_update_info_plz_try">Could not update information. Please try again!</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="saving">Saving</string>
    <string name="choose_family">Choose family</string>
    <string name="choose_fish">Choose fish</string>
    <string name="change_language">Change language?</string>
    <string name="change">Change</string>
    <string name="loading_image">Loading image(s)</string>
    <string name="error">Error</string>
    <string name="extract_data_fail">Extract data fail!</string>
    <string name="synchronizing_n_records">Synchronizing %s record(s)</string>
    <string name="loading">Loading</string>
    <string name="synchronizing">Synchronizing</string>
    <string name="sync_finish_success">Sync finish successfully</string>
    <string name="update_success">Update success!</string>
    <string name="update_fail">Update fail!</string>
    <string name="plz_try_after_few_minutes">Please try after few minutes!</string>
</resources>
