<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_home"
    tools:context=".view.newcaptainscreen.NewCaptainScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="30dp">
        <ImageView
            android:id="@+id/fsNewUser_header_icon_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/header_icon_padding"
            android:src="@drawable/facebook" />
        <ImageView
            android:id="@+id/fsNewUser_header_icon_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/header_icon_padding"
            android:src="@drawable/google_plus" />
        <ImageView
            android:id="@+id/fsNewUser_header_icon_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/header_icon_padding"
            android:src="@drawable/twitter" />
    </LinearLayout>
    <ImageView
        android:id="@+id/fsNewUser_logo"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="@dimen/logo_padding"
        android:src="@drawable/coppa_logo"/>
    <TextView
        android:id="@+id/fsNewUser_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lorem"
        android:textSize="15sp"
        android:gravity="center"
        android:padding="5dp"
        android:lines="3"
        android:maxLines="3"
        android:lineHeight="20dp"
        android:layout_marginBottom="@dimen/inp_margin_top"
        android:textColor="@color/colorAccent"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:background="@drawable/border"/>
    <EditText
        android:id="@+id/fsNewUser_username"
        android:lines="1"
        android:inputType="text"
        android:layout_marginTop="@dimen/inp_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_fisherman"
        android:drawableLeft="@drawable/ic_fisherman"
        android:drawableTint="@color/colorPrimaryDark"
        android:hint="@string/request_name"
        android:textColorHint="@color/hintColor"
        android:textColor="@color/colorPrimaryDark"
        android:drawablePadding="@dimen/drawable_padding"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:background="@drawable/border_radius"/>
    <EditText
        android:maxLength="10"
        android:id="@+id/fsNewUser_userphone"
        android:lines="1"
        android:inputType="phone"
        android:layout_marginTop="@dimen/inp_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_phone"
        android:drawableLeft="@drawable/ic_phone"
        android:drawableTint="@color/colorPrimaryDark"
        android:hint="@string/request_phone"
        android:textColorHint="@color/hintColor"
        android:textColor="@color/colorPrimaryDark"
        android:drawablePadding="@dimen/drawable_padding"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:background="@drawable/border_radius"/>
    <EditText
        android:id="@+id/fsNewUser_userboatcode"
        android:lines="1"
        android:inputType="textCapWords"
        android:layout_marginTop="@dimen/inp_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_boat"
        android:drawableLeft="@drawable/ic_boat"
        android:drawableTint="@color/colorPrimaryDark"
        android:hint="@string/request_boat_code"
        android:textColorHint="@color/hintColor"
        android:textColor="@color/colorPrimaryDark"
        android:drawablePadding="@dimen/drawable_padding"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:background="@drawable/border_radius"/>

    <Button
        android:id="@+id/fsNewUser_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_marginTop="@dimen/inp_margin_top"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:textColor="@android:color/white"
        android:background="@drawable/btn_success"/>
</LinearLayout>